Fixed dark mode

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -54,6 +54,7 @@ header {
     justify-content: space-between;
     padding: 1rem;
     box-shadow: 0 1px 30px 1px black;
+    z-index: 100;
 }
 
 #header-buttons-div {
@@ -114,6 +115,7 @@ main {
 }
 
 #hero-banner-div {
+    position: relative;
     grid-column: 1 / -1;
     width: 100%;
     height: 7rem;
@@ -123,6 +125,14 @@ main {
     width: 100%;
     height: 100%;
     object-fit: cover;
+}
+
+.hero-banner-image-dark-mode {
+    position: absolute;
+    top: 0;
+    left: 0;
+    opacity: 0;
+    transition: opacity 1s ease;
 }
 
 section {
